--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-	"name": "final-year-project",
+	"name": "final_year_project",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "nodemon backend/server.js",
+		"dev": "NODE_ENV=development nodemon backend/server.js",
 		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
-		"start": "node backend/server.js"
+		"start": "NODE_ENV=production node backend/server.js"
 	},
 	"type": "module",
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"dotenv": "^16.4.7",
-		"express": "^4.21.2",
-		"mongoose": "^8.10.0"
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
+		"mongoose": "^8.5.1",
+		"win-node-env": "^0.6.1"
 	},
 	"devDependencies": {
-		"nodemon": "^3.1.9"
+		"nodemon": "^3.1.4"
 	}
 }
