--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "NODE_ENV=development nodemon backend/server.js",
-		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+		"build": "npm install && npm --prefix frontend install && npm --prefix frontend run build",
 		"start": "NODE_ENV=production node backend/server.js"
 	},
 	"type": "module",
