--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
+		"express-session": "^1.18.1",
 		"mongoose": "^8.5.1"
 	},
 	"devDependencies": {
