--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"express-session": "^1.18.1",
-		"mongoose": "^8.5.1"
+		"mongoose": "^8.5.1",
+		"openai": "^4.96.0"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.4"
