--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 		"express": "^4.19.2",
 		"express-session": "^1.18.1",
 		"mongoose": "^8.5.1",
-		"openai": "^4.96.0"
+		"node-fetch": "^3.3.2",
+		"openai": "^4.96.0",
+		"win-node-env": "^0.6.1"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.4"
